--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -3,6 +3,8 @@ name: Integration
 on:
   pull_request:
     branches: [main, develop]
+  push:
+    branches: [main, develop]   # <- añadir temporalmente
   workflow_dispatch:
 
 jobs:
