--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
 # Entornos virtuales
 venv/
 .env/
+.venv/
+
+# Python cache
+__pycache__/
+**/__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# VS Code / IDE
+.vscode/
+.idea/
+
+# Logs / SO
+*.log
+.DS_Store
+Thumbs.db
 
 # Ignorar todos los archivos compilados por python
 __pycache__/
