--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,7 @@ FROM nginx:alpine
 
 # Copiar archivos estáticos
 COPY web /usr/share/nginx/html
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 # Exponer puerto web
 EXPOSE 80
