se añaden logs, modificacion de chatbot y prompt

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,3 +11,26 @@ http {
     }
   }
 }
+
+# # /etc/nginx/nginx.conf
+# events {}
+
+# http {
+#     include       /etc/nginx/mime.types;    # << IMPORTANTE
+#     default_type  application/octet-stream;
+
+#     sendfile on;
+
+#     server {
+#         listen 80;
+#         server_name _;
+
+#         root  /usr/share/nginx/html;        # Debe coincidir con donde montas/copias
+#         index index.html;
+
+#         # Si es SPA (React/Vue/etc.), deja esta regla; si NO lo es, puedes quitarla
+#         location / {
+#             try_files $uri $uri/ /index.html;
+#         }
+#     }
+# }
