--- a/.github/workflows/dockerflow.yml
+++ b/.github/workflows/dockerflow.yml
@@ -15,35 +15,36 @@ jobs:
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build and push image to DockerHub
+      - name: Build image back & front
         run: |
-          docker build -t matope1/hipotecassist-backend:latest -f backend/Dockerfile .
-          docker build -t matope1/hipotecassist-frontend:latest -f frontend/Dockerfile .
+          docker build -t matope1/hipotecassist-backend:ci -f backend/Dockerfile backend/
+          docker build -t matope1/hipotecassist-frontend:ci -f frontend/Dockerfile frontend/
 
       - name: Start with Docker Compose up
         run: |
-          docker compose up -d
-          sleep 15
+          docker compose -f docker-compose.ci.yml up -d
+          # Esperar a que el backend esté listo
+          until curl -s http://localhost:8000/; do
+            echo "Esperando backend..."
+            sleep 2
+          done
 
       - name: Tests API endpoints
         run: |
-          # GET
           curl -s -f http://localhost:8000/
 
-          # POST /analisis
           curl -s -X POST http://localhost:8000/analisis \
             -H "Content-Type: application/json" \
             -d '{"tipo":"variable","capital_pendiente":100000,"anos_restantes":20,"euribor":3.5,"diferencial":1.0}' \
             -f
 
-          # POST /preguntar
           curl -s -X POST http://localhost:8000/preguntar \
             -H "Content-Type: application/json" \
             -d '{"pregunta":"Hola"}' \
             -f
 
       - name: Clear with Compose down
-        run: docker compose down
+        run: docker compose -f docker-compose.ci.yml down
 
       - name: Log in DockerHub
         if: success()
@@ -54,9 +55,13 @@ jobs:
 
       - name: Push backend to DockerHub
         if: success()
-        run: docker push matope1/hipotecassist-backend:latest
+        run: |
+          docker tag matope1/hipotecassist-backend:ci matope1/hipotecassist-backend:latest
+          docker push matope1/hipotecassist-backend:latest
+          docker tag matope1/hipotecassist-frontend:ci matope1/hipotecassist-frontend:latest
+          docker push matope1/hipotecassist-frontend:latest
 
 
-      - name: Push frontend to DockerHub
-        if: success()
-        run: docker push matope1/hipotecassist-frontend:latest
+      # - name: Push frontend to DockerHub
+      #   if: success()
+      #   run: docker push matope1/hipotecassist-frontend:latest
