--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
 services:
   backend:
-    build: ./backend
+    image: matope1/hipotecassist-backend:latest
     container_name: backend
     ports:
       - "8000:8000" # si hay conflicto de puertos cambiar el primer numero
-    volumes:
-      - ./backend:/app
     env_file:
       - ./.env
     restart: always
 
   frontend:
-    build: ./frontend
+    image: matope1/hipotecassist-frontend:latest
     container_name: frontend
     ports:
       - "8080:80" # si hay conflicto de puertos cambiar el primer numero
