--- a/.github/workflows/dockerflow.yml
+++ b/.github/workflows/dockerflow.yml
@@ -5,9 +5,16 @@ on:
     branches: [feature/dockerizar]
   workflow_dispatch:
 
+
+
 jobs:
-  buid-push-test:
+  docker-test:
     runs-on: ubuntu-latest
+
+    env:
+      DOCKER_HUB_USERNAME: matope1 # ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_HUB_TOKEN: dckr_pat_h4J2zfsoXd6x4N03BPadqzbbJVM #${{ secrets.DOCKER_TOKEN }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,10 +57,10 @@ jobs:
         if: success()
         uses: docker/login-action@v2
         with:
-          username: matope1
-          password: JupiterPontia2025
+          username: ${{ env.DOCKER_HUB_USERNAME }}
+          password: ${{ env.DOCKER_HUB_TOKEN }}
 
-      - name: Push backend to DockerHub
+      - name: Push images to DockerHub
         if: success()
         run: |
           docker tag matope1/hipotecassist-backend:ci matope1/hipotecassist-backend:latest
