Feature/mll google (#12)
* Actualizacion de js y backend añadiendo chatbot

* añado requirements completo

* Dockerfile para crear una imagen de la aplicacion

* Create Info.md

* UI.html pasa a ser index.html para mayor comodidad

* arreglado cambio nombre .py

* Feature/front back dockercompose (#10)

* se separa el back y el front en dos contenedores y se crea docker compose

* Update Info.md

creado front y back por separado en dos contenedores, y un docker compose para automatizar despliegue

* Añadido proxy por error con chrome, y dockerizado back y front por separado

* Update Info.md

* Create .env

* se añaden logs, modificacion de chatbot y prompt

* Update README.md

* Delete Info.md

* Update .env

* Update .gitignore

* añado github action para test docker

* añado docker compose para ci,para local, y para prod

* arreglo login dockerhub

* test verificar funcionamiento de docker compose local actualizado

* Actualizo endpoint/preguntar y añado llm de gemini simple

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Entornos virtuales
 venv/
-.env/
+# .env/
+# .env
 .venv/
 
 # Python cache
@@ -23,3 +24,6 @@ Thumbs.db
 __pycache__/
 *.pyc
 
+# envs
+# **/.env
+# *.env
