--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,19 @@
-# Imagen base
 FROM python:3.12-slim
 
-# Carpeta de trabajo
 WORKDIR /app
 
-# Copiar requirements e instalar
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# deps del sistema (útiles para sentence-transformers, etc.)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copiar código
-COPY . .
+# Copiamos requirements desde la raíz del repo
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Exponer puerto del backend
+# Copiamos el código del backend
+COPY backend/ /app/
+
 EXPOSE 8000
 
-# Ejecutar Uvicorn
 CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "8000"]
