--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,12 +7,15 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copiamos requirements desde la raíz del repo
+# Instalar PyTorch CPU explícitamente
+RUN pip install --no-cache-dir torch==2.9.1+cpu --index-url https://download.pytorch.org/whl/cpu
+
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # Copiamos el código del backend
-COPY backend/ /app/
+COPY . .
+ENV PYTHONPATH=/app
 
 EXPOSE 8000
 
