--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,8 +10,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Instalar PyTorch CPU explícitamente
 RUN pip install --no-cache-dir torch==2.9.1+cpu --index-url https://download.pytorch.org/whl/cpu
 
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r /app/requirements.txt
+COPY ../requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copiamos el código del backend
 COPY . .
