--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   backend:
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: backend
     ports:
       - "8000:8000"
     env_file:
-      - ./.env
+      - backend/.env
     volumes:
       - ./data/docs_bancarios:/app/data/docs_bancarios:ro
     restart: always
