--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,17 @@
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    build: ./backend
     container_name: backend
     ports:
       - "8000:8000"
     env_file:
-      - backend/.env
+      - ./.env
     volumes:
       - ./data/docs_bancarios:/app/data/docs_bancarios:ro
     restart: always
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    # image: matope1/hipotecassist-frontend:latest
+    build: ./frontend
     container_name: frontend
     ports:
       - "8080:80"
