actualizacion porque da error al pasar test-docker

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -4,6 +4,8 @@ services:
     container_name: backend
     ports:
       - "8000:8000"
+    volumes:
+      - ./data/docs_bancarios:/app/data/docs_bancarios:ro
     env_file:
       - ./.env
     restart: always
