Qdrant Cloud, prompt y Pdf para RAG (#16)
* RAG + docker

* se actualiza a qdrant Cloud, se mejora el prompt, y se añaden pdf con datos ficticios para RAG

* actualizacion Dockerfile

* actualizacion Dockerfile

* actualizacion porque da error al pasar test-docker

* actualizacion porque da error al pasar test-docker

* actualizacion porque da error al pasar test-docker

* actualizacion porque da error al pasar test-docker

* actualizacion porque da error al pasar test-docker

---------

Co-authored-by: bittordani <victordani.martinez@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Entornos virtuales
 venv/
 # .env/
-# .env
 .venv/
+
+# Variables de entorno (secreto)
+# .env
 
 # Python cache
 __pycache__/
@@ -24,6 +26,9 @@ Thumbs.db
 __pycache__/
 *.pyc
 
-# envs
-# **/.env
-# *.env
+# Datos locales del proyecto (Qdrant y PDFs)
+qdrant_data/
+
+# Si NO quieres subir documentación/PDF de bancos
+# data/
+# *.pdf
