--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-GROQ_API_KEY=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 # Anadir a secret de github
-GOOGLE_API_KEY="AIzaSyAJrMmebfuNFdenzl8O8R6TbFUopXGCjgw"
+# GOOGLE_API_KEY="AIzaSyAJrMmebfuNFdenzl8O8R6TbFUopXGCjgw"
+GOOGLE_API_KEY=AIzaSyBfDbhxFVbE8wt8WRovV1Dbu8Esp_l46DU
+QDRANT_URL=https://fb7ee88b-c1ea-42dd-be16-86b580350e01.europe-west3-0.gcp.cloud.qdrant.io
+QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.7ER9HmetE3-Yvdd_B5W1jHWBd--nDPEpjHcRX4AxZas
