--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,22 @@
-# Imagen base
 FROM python:3.12-slim
 
-# Carpeta de trabajo
 WORKDIR /app
 
-# Copiar requirements e instalar
+# deps del sistema (útiles para sentence-transformers, etc.)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Instalar PyTorch CPU explícitamente
+RUN pip install --no-cache-dir torch==2.9.1+cpu --index-url https://download.pytorch.org/whl/cpu
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar código
+# Copiamos el código del backend
 COPY . .
+ENV PYTHONPATH=/app
 
-# Exponer puerto del backend
 EXPOSE 8000
 
-# Ejecutar Uvicorn
 CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "8000"]
