--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,106 @@
-# fastapi
+# annotated-doc==0.0.4
+# annotated-types==0.7.0
+# anyio==4.12.0
+# cachetools==6.2.2
+# certifi==2025.11.12
+# charset-normalizer==3.4.4
+# fastapi==0.122.0
+# filelock==3.20.0
+# fsspec==2025.10.0
+# google-auth==2.43.0
+# google-genai==1.52.0
+# grpcio==1.76.0
+# h11==0.16.0
+# h2==4.3.0
+# hf-xet==1.2.0
+# hpack==4.1.0
+# httpcore==1.0.9
+# httpx==0.28.1
+# huggingface-hub==0.36.0
+# hyperframe==6.1.0
+# idna==3.11
+# Jinja2==3.1.6
+# joblib==1.5.2
+# MarkupSafe==3.0.3
+# mpmath==1.3.0
+# networkx==3.6
+# numpy==2.3.5
+# nvidia-cublas-cu12==12.8.4.1
+# nvidia-cuda-cupti-cu12==12.8.90
+# nvidia-cuda-nvrtc-cu12==12.8.93
+# nvidia-cuda-runtime-cu12==12.8.90
+# nvidia-cudnn-cu12==9.10.2.21
+# nvidia-cufft-cu12==11.3.3.83
+# nvidia-cufile-cu12==1.13.1.3
+# nvidia-curand-cu12==10.3.9.90
+# nvidia-cusolver-cu12==11.7.3.90
+# nvidia-cusparse-cu12==12.5.8.93
+# nvidia-cusparselt-cu12==0.7.1
+# nvidia-nccl-cu12==2.27.5
+# nvidia-nvjitlink-cu12==12.8.93
+# nvidia-nvshmem-cu12==3.3.20
+# nvidia-nvtx-cu12==12.8.90
+# packaging==25.0
+# pillow==12.0.0
+# portalocker==3.2.0
+# pyasn1==0.6.1
+# pyasn1_modules==0.4.2
+# pydantic==2.12.5
+# pydantic_core==2.41.5
+# pypdf==6.4.0
+# python-dotenv==1.2.1
+# PyYAML==6.0.3
+# qdrant-client==1.16.1
+# regex==2025.11.3
+# requests==2.32.5
+# rsa==4.9.1
+# safetensors==0.7.0
+# scikit-learn==1.7.2
+# scipy==1.16.3
+# sentence-transformers==5.1.2
+# setuptools==80.9.0
+# starlette==0.50.0
+# sympy==1.14.0
+# tenacity==9.1.2
+# threadpoolctl==3.6.0
+# tokenizers==0.22.1
+# torch==2.9.1
+# tqdm==4.67.1
+# transformers==4.57.3
+# triton==3.5.1
+# typing-inspection==0.4.2
+# typing_extensions==4.15.0
+# urllib3==2.5.0
+# websockets==15.0.1
 # uvicorn[standard]
-# pydantic
-# requests
-# python-dotenv
-# pytest
+# google-generativeai==0.8.3
 
-# datetime
-# langchain==0.1.45
-# openai
 
 fastapi
 uvicorn[standard]
 pydantic
 python-dotenv
-requests
+
+# torch==2.9.1+cpu --index-url https://download.pytorch.org/whl/cpu
+# transformers
+sentence-transformers
+# huggingface-hub
+# tokenizers
+# safetensors
+
+qdrant-client
+
 google-genai
+google-generativeai
+google-auth
+
+# numpy
+# scipy
+# scikit-learn
+
+requests
+# tqdm
+# pillow
+pypdf
+# PyYAML
+# regex
