--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-# GOOGLE_API_KEY="AIzaSyAJrMmebfuNFdenzl8O8R6TbFUopXGCjgw"
-# GOOGLE_API_KEY=AIzaSyBfDbhxFVbE8wt8WRovV1Dbu8Esp_l46DU
-GOOGLE_API_KEY=AIzaSyA2g9VlsGqLbSyeypnQ8slhf8egnHK6iP0
-QDRANT_URL=https://fb7ee88b-c1ea-42dd-be16-86b580350e01.europe-west3-0.gcp.cloud.qdrant.io
-QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.7ER9HmetE3-Yvdd_B5W1jHWBd--nDPEpjHcRX4AxZas
+GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}
+QDRANT_URL=${{ secrets.QDRANT_URL }}
+QDRANT_API_KEY=${{ secrets.QDRANT_API_KEY }}
