Sync develop jan2026 (#34)
* Update README.md (#1)

* Update README.md

* Añadir .gitignore y requirements.txt iniciales

* Añadir pipeline mínima, actualizar gitignore y carpeta de tests inicial

* Fix: corregir test de humo para pipeline

* CI en develop

* Feature/UI+backend fast api (#8)

* Ui inicial

* Reestructuro el proyecto, añado un servidor usando FastAPI que conecta con el frontend y hace un análisis hipotecario simple.

* añado .venv/ al gitignore

* Intento quitar el vnev de git

* Creo nueva rama

* chore: aplicar .gitignore y quitar archivos no necesarios

* chore: aplicar .gitignore y dejar de trackear venv/caches

---------

Co-authored-by: matope1 <166601752+matope1@users.noreply.github.com>

* Feature/mll google (#12)

* Actualizacion de js y backend añadiendo chatbot

* añado requirements completo

* Dockerfile para crear una imagen de la aplicacion

* Create Info.md

* UI.html pasa a ser index.html para mayor comodidad

* arreglado cambio nombre .py

* Feature/front back dockercompose (#10)

* se separa el back y el front en dos contenedores y se crea docker compose

* Update Info.md

creado front y back por separado en dos contenedores, y un docker compose para automatizar despliegue

* Añadido proxy por error con chrome, y dockerizado back y front por separado

* Update Info.md

* Create .env

* se añaden logs, modificacion de chatbot y prompt

* Update README.md

* Delete Info.md

* Update .env

* Update .gitignore

* añado github action para test docker

* añado docker compose para ci,para local, y para prod

* arreglo login dockerhub

* test verificar funcionamiento de docker compose local actualizado

* Actualizo endpoint/preguntar y añado llm de gemini simple

* Qdrant Cloud, prompt y Pdf para RAG (#16)

* RAG + docker

* se actualiza a qdrant Cloud, se mejora el prompt, y se añaden pdf con datos ficticios para RAG

* actualizacion Dockerfile

* actualizacion Dockerfile

* actualizacion porque da error al pasar test-docker

* actualizaci

--- a/.github/workflows/dockerflow.yml
+++ b/.github/workflows/dockerflow.yml
@@ -2,9 +2,12 @@ name: dockerflow
 
 on:
   pull_request:
-    branches: [main, develop, feature/dockerizar]
+    branches: [main, develop]
   push:
-    branches: [main, develop, feature/dockerizar]
+    # cualquier push excepto main/develop
+    branches-ignore: 
+      - main
+      - develop   
   workflow_dispatch:
 
 
@@ -47,7 +50,7 @@ jobs:
           # Esperar a que el backend esté listo
           until curl -s http://localhost:8000/; do
             echo "Esperando backend..."
-            sleep 2
+            sleep 5
           done
 
         # Test de conectividad con los endpoints
