--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-GROQ_API_KEY=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 # Anadir a secret de github
-GOOGLE_API_KEY="AIzaSyAJrMmebfuNFdenzl8O8R6TbFUopXGCjgw"
+GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}
+QDRANT_URL=${{ secrets.QDRANT_URL }}
+QDRANT_API_KEY=${{ secrets.QDRANT_API_KEY }}
