--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Entornos virtuales
 venv/
-# .env/
-# .env
+.env/
 .venv/
+
+# Variables de entorno (secreto)
+.env
 
 # Python cache
 __pycache__/
@@ -19,11 +21,15 @@ __pycache__/
 *.log
 .DS_Store
 Thumbs.db
+logs/
 
 # Ignorar todos los archivos compilados por python
 __pycache__/
 *.pyc
 
-# envs
-# **/.env
-# *.env
+# Datos locales del proyecto (Qdrant y PDFs)
+qdrant_data/
+
+# Si NO quieres subir documentación/PDF de bancos
+# data/
+# *.pdf
