prueba flujo cloud

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,9 +14,17 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copiamos el código del backend
-COPY . .
+COPY backend/ /app/backend
 ENV PYTHONPATH=/app
 
-EXPOSE 8000
+COPY data /app/data
 
-CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "8000"]
+ARG PORT=8000
+ENV PORT $PORT
+EXPOSE $PORT
+
+# CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "8000"]
+# CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "${PORT}"]
+CMD ["sh", "-c", "uvicorn hipotecassist_api:app --host 0.0.0.0 --port $PORT"]
+
+# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${PORT}"]
