prueba flujo cloud

--- a/.github/workflows/autoDeployGCP.yml
+++ b/.github/workflows/autoDeployGCP.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m pytest backend/tests
+          python -m pytest tests
 
   deploy:
     needs: test
