--- a/.github/workflows/autoDeployGCP.yml
+++ b/.github/workflows/autoDeployGCP.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    env:
+    # env:
       # WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
       # SERVICE_ACCOUNT_EMAIL: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
       # GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
