--- a/.github/workflows/autoDeployGCP.yml
+++ b/.github/workflows/autoDeployGCP.yml
@@ -23,15 +23,15 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
-          pip install pytest
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install -r backend/requirements.txt
+      #     pip install pytest
 
-      - name: Run tests
-        run: |
-          python -m pytest tests
+      # - name: Run tests
+      #   run: |
+      #     python -m pytest tests
 
   deploy:
     needs: test
