--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,7 +15,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copiamos el código del backend
-COPY backend/ /app/backend
+COPY . .
 ENV PYTHONPATH=/app
 
 COPY data /app/data
