--- a/.github/workflows/autoDeployGCP.yml
+++ b/.github/workflows/autoDeployGCP.yml
@@ -75,6 +75,8 @@ jobs:
             --platform managed \
             --allow-unauthenticated \
             --set-env-vars \
+            --memory 4Gi \
+            --cpu 2 \
               GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }},\
               QDRANT_URL=${{ secrets.QDRANT_URL }},\
               QDRANT_API_KEY=${{ secrets.QDRANT_API_KEY }}
