--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,14 +19,13 @@ COPY . .
 
 # COPY data /app/data
 
-# ARG PORT=8000
-# ENV PORT $PORT
-EXPOSE 8080
+ARG PORT=8000
+ENV PORT $PORT
+EXPOSE $PORT
 
 # CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "8000"]
 # CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "${PORT}"]
 # CMD ["sh", "-c", "uvicorn hipotecassist_api:app --host 0.0.0.0 --port $PORT"]
-
 # CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${PORT}"]
 
-CMD sh -c "uvicorn hipotecassist_api:app --host 0.0.0.0 --port ${PORT:-8080}"
+CMD sh -c "uvicorn hipotecassist_api:app --host 0.0.0.0 --port $PORT"
