--- a/.github/workflows/autoDeployGCP.yml
+++ b/.github/workflows/autoDeployGCP.yml
@@ -76,4 +76,4 @@ jobs:
             --allow-unauthenticated \
             --memory 4Gi \
             --cpu 2 \
-            --set-env-vars GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}, QDRANT_URL=${{ secrets.QDRANT_URL }}, QDRANT_API_KEY=${{ secrets.QDRANT_API_KEY }}
+            --update-secrets GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY_SECRET }}:latest,QDRANT_URL=${{ secrets.QDRANT_URL_SECRET }}:latest,QDRANT_API_KEY=${{ secrets.QDRANT_API_KEY_SECRET }}:latest
