--- a/.github/workflows/autoDeployGCP.yml
+++ b/.github/workflows/autoDeployGCP.yml
@@ -77,3 +77,7 @@ jobs:
             --memory 4Gi \
             --cpu 2 \
             --set-secrets GOOGLE_API_KEY=GOOGLE_API_KEY:latest,QDRANT_API_KEY=QDRANT_API_KEY:latest,QDRANT_URL=QDRANT_URL:latest
+
+      - name: Deploy frontend to Cloud Storage
+        run: |
+          gsutil -m rsync -r -d frontend/web gs://hipotecassist-frontend
