--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,16 +23,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copiamos el código del backend
 COPY . .
 
-# COPY data /app/data
-
+# Creamos una variable para que el puerto sea dinamico para local como para CloudRun
+# local=8000 y Pipeline para deployCloudRun=8080
 ARG PORT=8000
 ENV PORT $PORT
 EXPOSE $PORT
 
-# CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "8000"]
-# CMD ["uvicorn", "hipotecassist_api:app", "--host", "0.0.0.0", "--port", "${PORT}"]
-# CMD ["sh", "-c", "uvicorn hipotecassist_api:app --host 0.0.0.0 --port $PORT"]
-# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${PORT}"]
 
 CMD sh -c "uvicorn hipotecassist_api:app --host 0.0.0.0 --port $PORT"
-# CMD sh -c "uvicorn hipotecassist_api:app --host 0.0.0.0 --port ${PORT:-8080}"
