--- a/.github/workflows/dockerflow.yml
+++ b/.github/workflows/dockerflow.yml
@@ -65,7 +65,8 @@ jobs:
 
           curl -s -X POST http://localhost:8000/preguntar \
             -H "Content-Type: application/json" \
-            -d '{"pregunta":"Hola"}' \
+            -d '{"pregunta":"Hola",
+                "session_id":"1234"}' \
             -f
 
         # Limpia archivos que no se necesitan una vez pasado el test
