Feature/auto deploy cloud (#37)
* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* Update qdrant_connection.py

* prueba flujo cloud

* Simplify setting environment variables in deployment

* Update secret environment variable references in GCP deploy

* Update secret references in autoDeployGCP.yml

* Change update-secrets to set-secrets in workflow

* Add sentence-transformers installation to Dockerfile

Install sentence-transformers and pre-download the model.

* Deploy frontend to Cloud Storage using gsutil

Add deployment step for frontend to Cloud Storage

* prueba flujo cloud

* prueba flujo cloud

* prueba flujo cloud

* Enhance README with CI/CD workflows and cloud architecture

Added CI/CD workflows for Google Cloud deployment and Docker CI flow, and updated architecture section with cloud infrastructure details.

* Remove commented preguntar_llm endpoint code

Removed commented-out code for the preguntar_llm endpoint and related logic.

* Actualizar memoria.py

* Add debug step for GCP secrets verification

Add debug step to check secrets in GCP deployment workflow

* Add permissions for OIDC in autoDeployGCP workflow

* arreglo test

* arreglo test

--- a/.github/workflows/dockerflow.yml
+++ b/.github/workflows/dockerflow.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [main, develop]
   push:
-    # cualquier push excepto main/develop
+    # cualquier push excepto main/develop, que ya pasa el test con el PR
     branches-ignore: 
       - main
       - develop   
@@ -65,7 +65,8 @@ jobs:
 
           curl -s -X POST http://localhost:8000/preguntar \
             -H "Content-Type: application/json" \
-            -d '{"pregunta":"Hola"}' \
+            -d '{"pregunta":"Hola",
+                "session_id":"1234"}' \
             -f
 
         # Limpia archivos que no se necesitan una vez pasado el test
